# Kameros_

./: README.md
Exifparser64/: CMakeLists.txt  ExifParser.cpp  ExifParser.h  dllmain.cpp
Kameros/: CMakeLists.txt  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  common.h  main.cpp
